# DocOps-Intelligence

./: README.md
infra/: .env.example  docker-compose.yml
infra/services/ai-python/: Dockerfile
infra/services/api-rust/: Dockerfile
services/ai-python/: requirements.txt
services/ai-python/services/ai-python/: .env.example  config.py
services/ai-python/services/ai-python/app/: embeddings.py  main.py  parser_stub.py  qdrant_client.py  queue_worker.py  schemas.py
services/api-rust/: Cargo.toml
services/api-rust/services/api-rust/: .env.example
services/api-rust/services/api-rust/services/api-rust/src/: models.rs
services/api-rust/services/api-rust/src/: config.rs
services/api-rust/services/api-rust/src/services/api-rust/src/: db.rs  main.rs  queue.rs  routes.rs  storage.rs
