[package]
name = "docops-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
anyhow = "1"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

sha2 = "0.10"


aws-config = "1"
aws-sdk-s3 = "1"
bytes = "1"

redis = { version = "0.25", features = ["tokio-comp"] }
